use micronaut library gradle plugin
https://micronaut-projects.github.io/micronaut-gradle-plugin/latest/#_micronaut_library_plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,8 @@ inceptionYear=2025
 projectName=TODO
 projectDesc=TODO
 projectUrl=TODO
-mavenGroup=TODO
+#TODO Change to your library group Id
+mavenGroup=example.micronaut
 githubOrg=TODO
 githubRepo=TODO
 organizationName=TODO
