--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 projectVersion=0.0.1-SNAPSHOT
-micronautVersion=4.7.4
 # Maven Publication
 inceptionYear=2025
 projectName=TODO
 projectDesc=TODO
 projectUrl=TODO
-mavenGroup=TODO
+#TODO Change to your library group Id
+mavenGroup=example.micronaut
 githubOrg=TODO
 githubRepo=TODO
 organizationName=TODO
